# parallaxapis-sdk-py

./: .gitignore  README.md  pyproject.toml
parallaxapis_sdk_py/: __init__.py  datadome.py  exceptions.py  perimeterx.py  sdk.py  solutions.py  tasks.py
src/: __init__.py  constants.py  datadome.py  exceptions.py  perimeterx.py  px.py  sdk.py  solutions.py  tasks.py
tests/: __init__.py  test_api_call.py  test_datadome.py
